--- a/user-app/index.html
+++ b/user-app/index.html
@@ -20,7 +20,7 @@
 
 <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 <script>
-const socket = io("http://localhost:3000");
+const socket = io("https://booking-ride-live-app.onrender.com");
 
 const pickup = document.getElementById("pickup");
 const drop = document.getElementById("drop");
