--- a/driver-app/index.html
+++ b/driver-app/index.html
@@ -14,8 +14,12 @@
 <div id="rideBox">Waiting for ride...</div>
 
 <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+  
 <script>
-const socket = io("https://booking-ride-live-app.onrender.com");
+  const socket = io("https://booking-ride-live-app.onrender.com", {
+  transports: ["websocket"],
+  reconnection: true
+});
 
 const statusEl = document.getElementById("status");
 const rideBox = document.getElementById("rideBox");
