--- a/user-app/index.html
+++ b/user-app/index.html
@@ -20,7 +20,11 @@
 
 <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 <script>
-const socket = io("https://booking-ride-live-app.onrender.com");
+  const socket = io("https://booking-ride-live-app.onrender.com", {
+  transports: ["websocket"],
+  reconnection: true
+});
+
 
 const pickup = document.getElementById("pickup");
 const drop = document.getElementById("drop");
